--- a/styles/style.css
+++ b/styles/style.css
@@ -53,4 +53,89 @@ nav{
     font-weight: 600;
     border-radius: 5px;
     padding: 17px 34px 17px 34px;
+    border: none;
+}
+
+/* vision section styles */
+.Future-vision{
+    
+    margin:30px auto;
+    width: 1350px;
+    height: 480px;
+}
+.vision-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.vision{
+    background-color: #006A50;
+    padding: 24px;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+.Future-vision-title{
+    color:#0E0E0E;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0%;
+    text-align: left;
+ }
+.Future-vision-desc{
+    color: #0E0E0EB3;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 20px;
+    gap: 12;
+}
+.vision-bg1{
+    background-color: #5490F533;
+}
+.vision-bg2{
+    background-color: #C6E4D6;
+}
+.vision-bg3{
+    background-color: #F7EBCF;
+}
+.vision-title{
+    color: #0E0E0ECC;
+    font-size: 20px;
+    font-weight: 700;
+}
+.vision-desc{
+    color: #0E0E0EB3;
+    font-size: 16px;
+    font-weight: 400;
+}
+.vision-btn1{
+    text-align: center;
+    padding: 8px 14px 11px 20px;
+    margin-top: 20px;
+    border-radius: 8px;
+    background-color: #5490F5;
+    border: none;
+    color: #FFFFFF;
+}
+.vision-btn2{
+    text-align: center;
+    padding: 8px 14px 11px 20px;
+    margin-top: 20px;
+    border-radius: 8px;
+    background-color:#09A15C;
+    border: none;
+    color: #FFFFFF;
+}
+.vision-btn3{
+    text-align: center;
+    padding: 8px 14px 11px 20px;
+    margin-top: 20px;
+    border-radius: 8px;
+    background-color:#FFC239;
+    border: none;
+    color: #FFFFFF;
 }
