--- a/styles/style.css
+++ b/styles/style.css
@@ -233,14 +233,38 @@ nav{
     font-weight: 600;
     background-color: #006A50;
     color: #FFFFFF;
-    margin: 40px 500px;
+    /* margin: 40px 500px; */
     border-radius: 8px;
     padding: 8px 14px 11px 20px;
     border: none;
+    align-items: center;
 }
 .donate-amount-bg{
     background: #FFFFFF;
     margin: 30px;
     padding: 30px 50px;
     border-radius: 10px;
+}
+.donate-title{
+    font-size: 40px;
+    font-weight: 700;
+    color: #0E0E0E;
+    text-align: center;
+}
+.donate-desc{
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0 18px;
+    color: #0E0E0EB3;
+}
+.donate-amount-2{
+    background-color: #C6E4D6;
+}
+.donate-amount-other{
+    align-content: center;
+    margin: 20px 300px;
+    padding: 15px 200px;
+    border-radius: 10px;
+    border: none;
 }
