--- a/styles/style.css
+++ b/styles/style.css
@@ -233,11 +233,11 @@ nav{
     font-weight: 600;
     background-color: #006A50;
     color: #FFFFFF;
-    /* margin: 40px 500px; */
+    margin: 10px 500px;
+    display: flex;
     border-radius: 8px;
-    padding: 8px 14px 11px 20px;
+    padding: 10px;
     border: none;
-    align-items: center;
 }
 .donate-amount-bg{
     background: #FFFFFF;
@@ -267,4 +267,5 @@ nav{
     padding: 15px 200px;
     border-radius: 10px;
     border: none;
+    text-align: center;
 }
