--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,11 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
 }
+/* shared style */
+.hover-buttons:hover{
+    background-color: rgb(205, 147, 12);
+    cursor: pointer;
+}
 /* nav styles */
 .main-background{
     background-color: #F5F5F5;
@@ -20,6 +25,15 @@ nav{
 .nav-title{
     color:  #0E0E0E;
     text-align: left;
+}
+.nav-btn{
+    padding: 18px 30px;
+    border-radius: 15px;
+    color:#006A50;
+    border-color: #006A50;
+    font-size: 13px;
+    font-weight: 600;
+    background-color:  #FFFFFF;
 }
 
 /* banner styles */
@@ -233,11 +247,10 @@ nav{
     font-weight: 600;
     background-color: #006A50;
     color: #FFFFFF;
-    margin: 10px 500px;
-    display: flex;
     border-radius: 8px;
-    padding: 10px;
+    padding: 10px 15px;
     border: none;
+    margin-bottom: 15px;
 }
 .donate-amount-bg{
     background: #FFFFFF;
@@ -262,10 +275,66 @@ nav{
     background-color: #C6E4D6;
 }
 .donate-amount-other{
-    align-content: center;
-    margin: 20px 300px;
-    padding: 15px 200px;
+    padding: 15px 15px;
     border-radius: 10px;
     border: none;
     text-align: center;
+    margin-bottom: 30px;
+    width: 600px;
+    font-size: 15px;
+}
+.donate-input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+/* Newsletter section style */
+.nl-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 130px;
+    background-color: #C6E4D6;
+    border-radius: 20px;
+}
+.nl-title{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 10px;
+
+}
+.nl-desc{
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+    color: #0E0E0EB3;
+    margin: 30px 0px;
+    width: 500px;
+}
+.nl-email{
+    padding: 18px 30px;
+    border: none;
+    border-radius: 15px 0px 0px 15px;
+    text-align: left;
+    width: 600px;
+}
+.nl-footer{
+    font-size: 13px;
+    font-weight: 400;
+    text-align: center;
+    color: #0E0E0EB3;
+    margin: 30px auto;
+
+}
+.nl-btn{
+    padding: 18px 30px;
+    border: none;
+    border-radius: 0px 15px 15px 0px;
+    background-color:#006A50;
+    font-size: 13px;
+    font-weight: 600;
+    color: #FFFFFF;
 }
